--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,4 @@ Description: These functions are useful to work with the normal mathematical
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
